# skill-audit

./: README.md  TASK.md  pyproject.toml
src/skill_audit/: ast_scanner.py  cli.py  scanner.py  score.py
test-vulnerable/: vuln.py
tests/: __init__.py  test_ast_scanner.py  test_cli.py  test_scanner.py  test_score.py
