[project]
name = "skill-audit"
version = "0.1.0"
description = "Attack vector analysis for agent skills"
authors = [{name = "Lulu", email = "lulu@clawd.bot"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
skill-audit = "skill_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
